css/dewslandslide/data_analysis/site_analysis.css
/* ... */
                                                                                  .radio-warning input[type="radio"] + label::after {
                                                                                    background-color: #f0ad4e; }
                                                                                    .radio-warning input[type="radio"]:checked + label::before {
                                                                                      border-color: #f0ad4e; }
                                                                                      .radio-warning input[type="radio"]:checked + label::after {
                                                                                        background-color: #f0ad4e; }

                                                                                        .radio-success input[type="radio"] + label::after {
                                                                                          background-color: #5cb85c; }
                                                                                          .radio-success input[type="radio"]:checked + label::before {
                                                                                            border-color: #5cb85c; }
                                                                                            .radio-success input[type="radio"]:checked + label::after {
                                                                                              background-color: #5cb85c; }
@media screen and (max-width: 901px) {
    .container {
        padding-right: 10px!important;
        padding-left: 10px!important;
        margin-right: 0px !important;
        margin-left: 0px !important;
        width: 100%;  
    }

    .panel-body {
      padding-left: 0px;
      padding-right: 0px;

    }
}

